k8s/mvp-manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cerebros-landing-page
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cerebros-landing-page
  template:
    metadata:
      labels:
        app: cerebros-landing-page
    spec:
      containers:
      - name: cerebros-landing-page
        image: davidt101/cerebros-03-2025-landing-page:dev-0010
        ports:
        - containerPort: 5173
        resources:
          requests:
            cpu: 250m
            memory: 512Mi
          limits:
            cpu: 500m
            memory: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: cerebros-landing-page-service
spec:
  selector:
    app: cerebros-landing-page
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5173
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cerebros-landing-page-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cerebros-landing-page-api
  template:
    metadata:
      labels:
        app: cerebros-landing-page-api
    spec:
      containers:
      - name: cerebros-landing-page-api
        image: davidt101/cerebros-03-2025-landing-page-apis:dev-0011
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: 250m
            memory: 512Mi
          limits:
            cpu: 500m
            memory: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: cerebros-landing-page-api-service
spec:
  selector:
    app: cerebros-landing-page-api
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cerebros-landing-page-ingress
  annotations:
    kubernetes.io/ingress.class: gce
spec:
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: cerebros-landing-page-api-service
            port: 
              number: 8000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cerebros-landing-page-service
            port: 
              number: 5000
